package edu.fiuba.algo3.visuales;

public interface Observer {


     void change();

}
